// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > renders correctly with class 1`] = `
<div>
  <div
    class="inline-flex items-center absolute"
  >
    <!--v-if-->
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > renders correctly with disabled 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <!--v-if-->
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      disabled=""
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > renders correctly with id 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <!--v-if-->
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      id="id"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > renders correctly with leading slot 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <span
      class="absolute inset-y-0 start-0 flex items-center ps-3"
    >
      
      Leading slot
      
    </span>
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset ps-11"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > renders correctly with size lg 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <!--v-if-->
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > renders correctly with size md 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <!--v-if-->
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-1.5 px-2.5 py-1.5 text-sm focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > renders correctly with size sm 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <!--v-if-->
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-1 px-2 py-1 text-xs focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > renders correctly with trailing slot 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <!--v-if-->
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset pe-11"
      type="text"
    />
    <span
      class="absolute inset-y-0 end-0 flex items-center pe-3"
    >
      
      Trailing slot
      
    </span>
  </div>
</div>
`;

exports[`Input > renders correctly with ui 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
  >
    <!--v-if-->
    <input
      class="w-full appearance-none border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated text-highlighted ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset rounded-full"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;
